# gpt-sketchpad

./: .gitignore  LICENSE  README.md  pyproject.toml
letsbuildgpt/: fineweb.ipynb  hellaswag.ipynb  multi_head_attention.ipynb  play.ipynb  test_ddp.py  test_mlp_moons.ipynb  train_gpt2.py
notebooks/: 0100_building_micrograd.ipynb  0100_building_micrograd_part1.ipynb  0100_character_level_bigram_model.ipynb  0110_bigram_model_gradient_descent.ipynb  0110_building_micrograd_part2.ipynb  0200_makemore_p1_bigrams_count.ipynb  0210_makemore_part1_bigrams_gradient.ipynb  0300_makemore_p2_mlp.ipynb  0300_makemore_part2_mlp.ipynb  0340_makemore_p2b_mlp_loss_checks.ipynb  0350_makemore_p2c_mlp_how_to_find_lr.ipynb  0400_makemore_p3_optimize_training.ipynb  0410_makemore_p3b_pytorchify_and_visualize.ipynb  0500_makemore_p4_backprop_ninja.ipynb  0510_makemore_p4b_train.ipynb  0600_makemore_p5_wavenet.ipynb  0700_lets_build_gpt.ipynb  0710_lets_build_gpt_karpathy.ipynb  0750_lets_build_gpt_mini_attention.ipynb  0800_lets_build_tokenizer.ipynb  9100_optimizers.ipynb
