[project]
name = "gpt-sketchpad"
version = "0.1.0"
description = "Collection of Jupyter Notebooks building up to reproduce GPT-2 from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel==7.1.0",
  "numpy==2.3.4",
  "torch==2.9.0",
  "matplotlib==3.10.7"
]

# Don't allow non-wheel installs (no copile from source)
[tool.uv.pip]
# Alias for --only-binary :all:
no-build = true
