[project]
name = "gpt-sketchpad"
version = "0.1.0"
description = "Collection of Jupyter Notebooks building up to reproduce GPT-2 from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel==7.1.0",
  "numpy==2.3.4",
  "torch==2.9.0",
  "matplotlib==3.10.7",
  "graphviz==0.21",
  "transformers==4.57.3",
  "ipywidgets==8.1.8",
  "tiktoken==0.12.0",
]

# Don't allow non-wheel installs (no copile from source)
[tool.uv.pip]
# Alias for --only-binary :all:
no-build = true
